# macross-serial

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
src/: __init__.py  __main__.py  async_serial.py  tsv_parser.py  validator.py
