[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "macross-serial"
version = "1.0.2"
description = ""
authors = ["Rondou Chen <40and44sis@gmail.com>", "Henry Chang <mr.changyuheng@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/rondou/macross-serial"
packages = [
    {include = "macross_serial", from = "packages"},
]

[tool.poetry.dependencies]
python = "^3.8.1"
aioserial = "*"
plumbum = "*"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
mypy = "^0.782"

[tool.poetry.scripts]
macross-serial = 'macross_serial.macross_serial:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
